--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -120,12 +120,12 @@ p {
 	margin:0 0 1.5em 0;
 	padding: 0;
 }
-.lynchburg-main p a:link {
+/*.lynchburg-main p a:link {
 	text-decoration: underline;
 	}
 .lynchburg-main p a:hover, {
 	text-decoration:none;
-	}
+	}*/
 strong {
 	color:#565656;
 }
