--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -223,8 +223,14 @@ box-shadow:2px 2px 7px 1px #A8A8A8;
 	background:url("../images/divider_content.png") no-repeat center;
 	height:4px;
 	width:100%;
-	margin:30px 0 45px;
+	margin:30px 0 45px 0;
 }
+/*.divider_content_sidebar {
+	border-bottom:#d0d2d8 double 1px;
+	height:4px;
+	width:100%;
+	padding-top:20px;
+}*/
 .divider_top {
 	background: url("../images/square_divider.png") repeat-x scroll center center transparent;
 	clear: both;
