added megamenu-text class

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -207,6 +207,7 @@ body.front {
 
 .view-athletics-schedule li { margin-bottom:10px; }
 
+.megamenu-text { margin-top:40px; }
 
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
