--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -259,6 +259,12 @@ body.front {
 #mini-panel-student_life_megamenu h2{
 	padding-bottom:10px;
 }
+
+
+.megamenu-text { margin-top:40px; }
+
+
+
 /**********************************************
  * TABS AND HOMEPAGE SPECIFIC CONTENT STYLES  *
 **********************************************/
