news dateline spacing

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1038,6 +1038,12 @@ form.normal input[type="submit"]:hover {
 	height:23px;
 	width:6px
 }
+
+/***************************
+ * specific misc   *
+ ***************************/
+.pane-node-field-date .field-name-field-date {margin-bottom:15px;} 
+ 
 /*************************
  *  footer area  top        *
  *************************/
