--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1048,7 +1048,9 @@ form.normal input[type="submit"]:hover {
 /***************************
  * specific misc   *
  ***************************/
-.pane-node-field-date .field-name-field-date {margin-bottom:15px;} 
+.field-name-field-date {margin-bottom:15px;} 
+ 
+ 
  
 /*************************
  *  footer area  top        *
