--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -641,7 +641,7 @@ table.surreptitious td ul.links {
 .align-btn-right {
 	float: right;
 }
-.default {
+.default  {
 	color:#858585;
 	border: 1px solid rgba(202,202,202,0.5);
 	text-shadow:1px 1px 0 #fcfcfc;
@@ -655,6 +655,9 @@ table.surreptitious td ul.links {
 	/*	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#e3e3e3');*/
 	position:relative;
 	behavior: url("js/PIE.htc");
+}
+a.default:link {
+	color:#858585;
 }
 .dark {
 	color:#f1f1f1;
@@ -671,6 +674,9 @@ table.surreptitious td ul.links {
 	position:relative;
 	behavior: url("js/PIE.htc");
 }
+a.dark:link {
+	color:#f1f1f1;
+}
 .light {
 	color:#f1f1f1;
 	border: 1px solid rgba(96,114,119,0.2);
@@ -685,6 +691,9 @@ table.surreptitious td ul.links {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#d9d9d9',GradientType=0 ); /* IE6-9 */
 	position:relative;
 	behavior: url("js/PIE.htc");
+}
+a.light:link {
+	color:#f1f1f1;
 }
 .red {
 	color:#f1f1f1;
@@ -701,6 +710,9 @@ table.surreptitious td ul.links {
 	position:relative;
 	behavior: url("js/PIE.htc");
 }
+a.red:link {
+	color:#fff;
+}
 .blue {
 	color:#f1f1f1;
 	border: 1px solid rgba(6,82,130,0.2);
@@ -715,6 +727,9 @@ table.surreptitious td ul.links {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#218bd5', endColorstr='#125786',GradientType=0 ); /* IE6-9 */
 	position:relative;
 	behavior: url("js/PIE.htc");
+}
+a.blue:link {
+	color:#f1f1f1;
 }
 .button:hover {
 	background: #f3f3f3;
