--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -293,6 +293,7 @@ body.front {
 	-webkit-border-bottom-right-radius:9px;
 	-moz-border-radius-bottomright:9px;
 	border-bottom-right-radius:9px;	
+	
 }
 .quicktabs-wrapper{
 	background: #ffffff; 
@@ -303,11 +304,18 @@ body.front {
 	background: -ms-linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
 	background: linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeef2',GradientType=0 );
-	-webkit-box-shadow:0px 14px 32px -5px #a0a0a0;
-	-moz-box-shadow:0px 14px 32px -5px #a0a0a0;
-	-o-box-shadow:0px 14px 32px -5px #a0a0a0;
-	-ms-box-shadow:0px 14px 32px -5px #a0a0a0;
-	box-shadow:0px 14px 32px -5px #a0a0a0;
+	-webkit-box-shadow:0px 14px 15px -5px #b7b7b7;
+	-moz-box-shadow:0px 14px 15px -5px #b7b7b7;
+	-o-box-shadow:0px 14px 15px -5px #b7b7b7;
+	-ms-box-shadow:0px 14px 15px -5px #b7b7b7;
+	box-shadow:0px 14px 15px -5px #b7b7b7;
+	margin-bottom:35px;
+	-webkit-border-bottom-left-radius:9px;
+	-moz-border-radius-bottomleft:9px;
+	border-top-left-radius:9px;
+	-webkit-border-bottom-right-radius:9px;
+	-moz-border-radius-bottomright:9px;
+	border-bottom-right-radius:9px;
 }
 /*#quicktabs-library_tabs .item-list ul {
 	width:460px;
