--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -295,7 +295,7 @@ body.front {
 	border-bottom-right-radius:9px;	
 	
 }
-.quicktabs-wrapper{
+#quicktabs-container-undergraduate_admission_tabs {
 	background: #ffffff; 
 	background: -moz-linear-gradient(top,  #ffffff 0%, #edeef2 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#edeef2));
@@ -304,18 +304,18 @@ body.front {
 	background: -ms-linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
 	background: linear-gradient(top,  #ffffff 0%,#edeef2 100%); 
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edeef2',GradientType=0 );
-	-webkit-box-shadow:0px 14px 15px -5px #b7b7b7;
-	-moz-box-shadow:0px 14px 15px -5px #b7b7b7;
-	-o-box-shadow:0px 14px 15px -5px #b7b7b7;
-	-ms-box-shadow:0px 14px 15px -5px #b7b7b7;
-	box-shadow:0px 14px 15px -5px #b7b7b7;
+	-webkit-box-shadow:2px 2px 7px 1px #cacaca;
+	-moz-box-shadow:2px 2px 7px 1px #cacaca;
+	-o-box-shadow:2px 2px 7px 1px #cacaca;
+	-ms-box-shadow:2px 2px 7px 1px #cacaca;
+	box-shadow:2px 2px 7px 1px #cacaca;
 	margin-bottom:35px;
-	-webkit-border-bottom-left-radius:9px;
-	-moz-border-radius-bottomleft:9px;
-	border-top-left-radius:9px;
-	-webkit-border-bottom-right-radius:9px;
-	-moz-border-radius-bottomright:9px;
-	border-bottom-right-radius:9px;
+	-webkit-border-bottom-left-radius:5px;
+	-moz-border-radius-bottomleft:5px;
+	border-top-left-radius:5px;
+	-webkit-border-bottom-right-radius:5px;
+	-moz-border-radius-bottomright:5px;
+	border-bottom-right-radius:5px;
 }
 /*#quicktabs-library_tabs .item-list ul {
 	width:460px;
