surreptitious table works

--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -481,6 +481,7 @@ table.surreptitious {
   	-moz-box-shadow:none;
   	-webkit-box-shadow:none;
 	box-shadow:none;
+	border:none;
 }
 
 table.surreptitious thead th, table.surreptitous th {
