--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1073,7 +1073,7 @@ form.normal input[type="submit"]:hover {
 	padding-right:12px;
 }
 .pane-footer_bar_left li a, .pane-footer_bar_right li a {
-	padding:10px;/* border:#0F3 solid 1px;*/
+	padding:10px; border:#0F3 solid 1px;
 }
 #give a, #newsevents a, #facstaff a, #follow-us a, #facebook a, #twitter a, #youtube a, #flickr a, #blog a {
 	display:inline-block;
