--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1079,7 +1079,7 @@ form.normal input[type="submit"]:hover {
 
 
 /*social media icons*/
-#follow-us a, #facebook a, #twitter a, #youtube a, #flickr a, #blog a {
+#facebook a, #twitter a, #youtube a, #flickr a, #blog a {
 	width:20px;
 }
 /*give*/
@@ -1190,7 +1190,6 @@ footer#section-footer h2 {
 footer#section-footer ul {
 	margin-left:0;
 	padding-left:0;
-	/*border:#0F0 solid 1px;*/
 }
 footer#section-footer li {
 	list-style:none;
@@ -1201,7 +1200,6 @@ footer#section-footer li a {
 footer#section-footer li a:hover {
 	color:#fff;
 	text-decoration:underline;
-	/*border:#0F0 solid 1px;*/
 }
 
 .footer-image {
